Merged PR 55083: v1.0.6: Make sourceLastModifiedDate mandatory on binaries
- Move common logic out of Spark example ItemSubmitter and cleanup data type handling
- Make sourceLastModifiedDate mandatory on binaries; release v1.0.6

Related work items: #350342